Bug 62312 - : Error Bars Disappear in Calc when saved as .xls or .xlsx
Summary: : Error Bars Disappear in Calc when saved as .xls or .xlsx
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.0.1.2 release
Hardware: Other macOS (All)
: high normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.1.0
Keywords:
: 62390 64018 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-03-13 23:01 UTC by Sharky
Modified: 2013-06-11 07:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example Spreadsheet (7.50 KB, application/vnd.ms-excel)
2013-03-30 14:14 UTC, Sharky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sharky 2013-03-13 23:01:27 UTC
Problem description: Error bars cannot be easily inserted and disappear after save and close. 

Steps to reproduce:
1. Create Bar Chart
2. Right click and select Insert Y error bars/Cell Range
3. Click field icon to right, nothing happens. If written in by hand, error bars disappear after saving, closing and reopening.

Current behavior: Error bars do not insert and disappear on saving.

Expected behavior: Error bars are inserted and persist on saving.

           
Operating System: Mac OS X
Version: 4.0.1.2 release
Comment 1 Jorendc 2013-03-19 17:38:46 UTC
Hi,

Thanks for your time reporting.
I know there were problems related to error bars, and Markus (a core developer) did great job squashing as much bugs as possible. Therefore I'm going to ask you if you see the possibility to retest using our Release Candidate of LibreOffice 4.0.2(.1) that you can download here: http://www.libreoffice.org/download/pre-releases/

Is this behavior still reproducible using this version?

Thanks in advance for your feedback,
Joren
Comment 2 Markus Mohrhard 2013-03-25 17:26:14 UTC
*** Bug 62390 has been marked as a duplicate of this bug. ***
Comment 3 Markus Mohrhard 2013-03-25 17:28:44 UTC
Seems to work in master so please check with 4.0.2.2
Comment 4 Sharky 2013-03-28 03:37:28 UTC
Oddly,hey still disappear in 4.0.2.1 prerelease, but only when the file is saved as .xls. When the file is a .ods they save normally.
Comment 5 Sharky 2013-03-30 05:02:56 UTC
4.0.2.2 prerelease also fails to save error bars when saved as .xls or .xlsx spreadsheets. Error bars save properly in .ods, but not .xls or .xlsx.

Serious issue, as people relied upon this for spreadsheet compatibility.
Comment 6 retired 2013-03-30 10:51:23 UTC
Sharky: Please leave version on 4.0.1.2 since that is the version the bug first appeared. Comments are used to state that the bug is still valid in newer version.

Is it possible to attach an example document so it's easier for others to test and verify as well?
Comment 7 Sharky 2013-03-30 14:14:36 UTC
Created attachment 77230 [details]
Example Spreadsheet

Example spreadsheet added. Attempting to add the "Error" column as Y error bars to the columbs in chart works only until reopening file. Closing spreadsheet results in loss of error bars. This is true for .xls and .xlsx files.
Comment 8 Markus Mohrhard 2013-04-24 10:18:32 UTC
Ok, I'll check it and hopefully with the error bar rework from the last days it is a bit easier to implement it.
Comment 9 Markus Mohrhard 2013-04-28 15:11:38 UTC
Looking at the export code this was not implemented for OOXML export. I haven't looked into XLS but my motivation for fixing the XLS case is not that big.
Comment 10 Jorendc 2013-04-28 20:47:40 UTC
*** Bug 64018 has been marked as a duplicate of this bug. ***
Comment 11 Commit Notification 2013-04-28 22:23:44 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=33671ee41300d762c8fc7a674a60efe152fffd45

export for error bars to OOXML, fdo#62312



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 ign_christian 2013-06-11 07:10:44 UTC
Marking FIXED per comment 11