export for error bars to OOXML, fdo#62312

This does not work yet as we have several validation errors in our
exported OOXML chart doc. I have to clean them up before the documents
are accepted by Excel.

Change-Id: I0bba64a9c6cab489199c8e6f04158fea7b953d0a